tests/parser/validinput/emptyfuncint.idp
vocabulary V{
	type x
	f(x):x
}
structure S:V{
	f = {}
}
procedure main(){
	return 1	
}
