tests/parser/invalidinput/constructed_no_autocomplete.idp
vocabulary V{
	type T	 constructed from {jos}
	P(T)
}
structure S:V{
	P={A}
}
procedure main(){
	return 1;
}
